# landlordgame-complete

./: CMakeLists.txt  DOUDIZHUGame.pro  README.md  aiplayer.cpp  aiplayer.h  audiomanager.h  card.cpp  card.h  cardanimator.h  cardlayout.cpp  cardlayout.h  cardtypejudger.cpp  cardtypejudger.h  cardwidget.cpp  cardwidget.h  deck.cpp  deck.h  gamecontroller.h  humanplayer.cpp  humanplayer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  resources.qrc  高级语言程序设计2-2大作业方案(2025).docx
